# FracGM

./: .clang-format-ignore  .gitignore  .gitmodules  .ruff.toml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: check-code-quality.yaml  check-fracgm-build.yaml  check-rust-build.yaml
appendix/: README.md
appendix/appx_A/: README.md  fracgm.py  main.py
appendix/appx_B/: README.md
appendix/appx_C/: README.md
docker/: Dockerfile
examples/cpp/: .gitignore  README.md  example_fracgm_cpp_project.cpp  meson.build
examples/data/: cloud_dst.txt  cloud_src.txt  gt.txt
examples/python/: README.md  example_fracgm_py_project.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
fracgm/: Cargo.toml  build.rs
fracgm-cxx/: Cargo.toml  cbindgen.toml
fracgm-cxx/include/: fracgm.h  fracgm_rust_wrapper.h
fracgm-cxx/src/: array_helper.rs  lib.rs
fracgm-python/: Cargo.toml  pyproject.toml
fracgm-python/fracgm/: __init__.py  __init__.pyi
fracgm-python/fracgm/registration/: __init__.py  __init__.pyi
fracgm-python/fracgm/rotation/: __init__.py  __init__.pyi
fracgm-python/fracgm/translation/: __init__.py  __init__.pyi
fracgm-python/src/: lib.rs
fracgm/src/: lib.rs  mcis.rs  registration.rs  solver.rs  translation.rs  utils.rs
fracgm/src/mcis/: array_helper.rs  graph.cpp  graph.h  inlier_selection.cpp  utils.h  wrapper.rs
fracgm/src/registration/: decoupled.rs  linear.rs  utils.rs
fracgm/src/rotation/: linear.rs  utils.rs
fracgm/src/translation/: linear.rs  utils.rs
geman-mcclure-rotation-solver/: Cargo.toml
geman-mcclure-rotation-solver-python/: Cargo.toml  pyproject.toml
geman-mcclure-rotation-solver-python/geman_mcclure_rotation_solver/rotation/: __init__.py  __init__.pyi
geman-mcclure-rotation-solver-python/src/: lib.rs
geman-mcclure-rotation-solver/src/: lib.rs  rotation.rs  solver.rs  utils.rs
geman-mcclure-rotation-solver/src/rotation/: linear.rs
gm-solver/: Cargo.toml
gm-solver-python/: Cargo.toml  pyproject.toml
gm-solver-python/gm_solver/: __init__.py  __init__.pyi
gm-solver-python/gm_solver/registration/: __init__.py  __init__.pyi
gm-solver-python/gm_solver/rotation/: __init__.py  __init__.pyi
gm-solver-python/gm_solver/translation/: __init__.py  __init__.pyi
gm-solver-python/src/: lib.rs
gm-solver/src/: lib.rs  solver.rs  utils.rs
scripts/: build_fracgm_cxx_library.py  build_fracgm_python_package.py  update_fracgm_cxx_include.py  utils.py
src/: lib.rs  solver.rs
(+5 files in other folders)
