[package]
name = "geman-mcclure-rotation-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geman_mcclure_rotation_solver"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
numpy = "0.21.0"
osqp = "0.6.2"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
