[package]
name = "geman-mcclure-rotation-solver-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geman_mcclure_rotation_solver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["experimental-declarative-modules"] }
numpy = "0.21.0"
geman-mcclure-rotation-solver = { path = "../geman-mcclure-rotation-solver" }
